# extindex-rs

./: .gitignore  CHANGELOG.md  Cargo.toml  README.md  mlc_config.json
.github/workflows/: push-tester.yml
benches/: builder.rs  extindex.rs  index.rs  reader.rs
examples/: serde_struct.rs
src/: builder.rs  data.rs  encodable.rs  entry.rs  index.rs  lib.rs  reader.rs  seri.rs  serializable.rs  size.rs  utils.rs
tests/: build_and_query.rs
