[package]
name = "extindex"
description = "Persisted immutable index"
version = "0.4.1"
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
license = "Apache-2.0"
readme = "README.md"
keywords = ["index", "skip", "list", "persistence"]
repository = "https://github.com/appaquet/extindex-rs"
edition = "2018"

[dependencies]
extsort = "0.4"
byteorder = "1.3"
log = "0.4"
memmap2 = "0.5"

[dev-dependencies]
tempfile = "3.1"
skeptic = "0.13"

[build-dependencies]
skeptic = "0.13"
