[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
description = "Persisted immutable index"
edition = "2021"
keywords = ["index", "skip", "list", "persistence"]
license = "Apache-2.0"
name = "extindex"
readme = "README.md"
repository = "https://github.com/appaquet/extindex-rs"
version = "0.5.0"

[lib]
bench = false

[features]
default = ["serde"]
serde = ["dep:serde", "bincode"]

[dependencies]
bincode = {version = "2.0.0-rc.1", features = ["serde"], optional = true}
byteorder = "1.3"
extsort = "0.4"
log = "0.4"
memmap2 = "0.5"
serde = {version = "1.0", optional = true}
smallvec = "1.9.0"

[dev-dependencies]
criterion = "0.3"
skeptic = "0.13"
tempfile = "3.1"

[[bench]]
harness = false
name = "reader"
