[package]
authors = ["Andre-Philippe Paquet <appaquet@gmail.com>"]
description = "Persisted immutable index"
edition = "2021"
keywords = ["index", "skip", "list", "persistence"]
license = "Apache-2.0"
name = "extindex"
readme = "README.md"
repository = "https://github.com/appaquet/extindex-rs"
version = "0.7.0"

[lib]
bench = false

[features]
default = ["serde"]
serde = ["dep:serde", "bincode"]

[dependencies]
bincode = { version = "2.0.0-rc.3", features = ["serde"], optional = true }
byteorder = "1.5"
extsort = { git = "https://github.com/appaquet/extsort-rs.git", branch = "updates" }
# extsort = { path = "../extsort" }
# extsort = "0.4"
log = "0.4"
memmap2 = "0.9"
serde = { version = "1.0", optional = true }
smallvec = "1.13.1"

[dev-dependencies]
criterion = "0.5"
tempfile = "3.10"

[build-dependencies]
skeptic = "0.13"

[[bench]]
harness = false
name = "builder"

[[bench]]
harness = false
name = "reader"

[profile.bench]
debug = true
